<resources>
    <string name="app_name">PASS</string>
    <string name="text_help_registration">Помощь в оформлении</string>
    <string name="notifications">Уведомления</string>
    <string name="registration">Регистрация</string>
    <string name="to_enter_number_tel"> Введите номер мобильного телефона</string>
    <string name="send_sms">На указанный вами номер мы отправили&lt;br>
СМС с кодом активации.&lt;br>
Введите полученный код в&lt;br>
соответствующее поле</string>
    <string name="enter">Войти</string>
    <string name="error_server">Ошибка сервера</string>
    <string name="didnt_get_sms">Не приходит СМС</string>
    <string name="send_code_retry">Отрпавить код повторно</string>
    <string name="retry_send_code">Выслать код повторно через %s секунд</string>
    <string name="phone">Телефон</string>
    <string name="hasntInternet">Нет интернет соединения</string>
    <string name="fio">ФИО</string>
    <string name="email">E-Mail</string>
    <string name="company">Компания</string>
    <string name="my_data">Мои данные</string>
    <string name="save">Сохранить</string>
    <string name="cars">Автомобили</string>
    <string name="add_cars">Добавить автомобиль</string>
    <string name="reg_number">Регистрационный номер</string>
    <string name="reg_number_with_point">Регистрационный номер *</string>
    <string name="label_model_auto">Марка и модель автомобиля</string>
    <string name="enter_number">Введите госномер ТС</string>
    <string name="name_driver">Имя водителя</string>
    <string name="rus">RUS</string>
    <string name="driver">Водитель: </string>
    <string name="data_car">Данные автомобиля</string>
    <string name="fail_code">Не верный код из СМС</string>
    <string name="fail_reg_number">Введите корректный госномер</string>
    <string name="passes">Пропуска</string>
    <string name="docs">Документы</string>
    <string name="to_date">%s %s</string>
    <string name="pts">ПТС</string>
    <string name="success_add_car">Автомобиль успешно добавлен</string>
    <string name="sts">СТС</string>
    <string name="dk">ДК</string>
    <string name="dont_may_is_empty">Поле не может быть пустым</string>
    <string name="open">Открыть</string>
    <string name="driver_card">Вод. удостоверение</string>
    <string name="passport">Паспорт</string>
    <string name="contract_credit">Договор лизинга</string>
    <string name="contrsct_carriage">Договор перевозки</string>
    <string name="card_company">Карточка предприятия</string>
    <string name="recommendations">Рекомендации</string>
    <string name="add_docs_car">Добавьте документы на автомобиль,&lt;br> чтобы в будущем выпускать пропуска&lt;br> автоматически</string>
    <string name="help_reg">Помощь в оформлении</string>
    <string name="havent_pass">Пропуска нет</string>
    <string name="date_from_date_to">с &lt;b>%s&lt;/b> по &lt;b>%s %s&lt;/b></string>
    <string name="email_allready_registration">Эта почта уже зарегистрирована</string>
    <string name="status">%s &lt;b>%s&lt;/b> %s</string>
    <string name="all">Все</string>
    <string name="unread">Непрочитанные</string>
    <string name="annual">Годовой</string>
    <string name="one_time">Разовый</string>
    <string name="you_havent_cars">У вас пока нет автомобилей.&lt;br>
Добавьте номера автомобилей для&lt;br>
отслеживания</string>
    <string name="add">Добавить</string>
    <string name="code_success_send">Код активаци успешно отправлен!</string>
    <string name="agreement">Я принимаю условия &lt;u>пользовательского соглашения&lt;/u> и даю согласие на обработку персональных данных согласно &lt;u>политике конфиденциальности.&lt;/u></string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="text_status">Статус</string>
    <string name="text_type_pass">Тип пропуска</string>
    <string name="period">Период</string>
    <string name="text_sort">Сортировка</string>
    <string name="info_pass_su">info@pass.su</string>
    <string name="inclusively">(включительно)</string>
    <!--  Профиль-кабинет    -->
    <string name="email_supprt">info@pass.su</string>
    <string name="text_title_mail">Мобильное приложение</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="phone_required">Телефон*</string>
    <string name="title_text">Технические работы</string>
    <string name="positive_text">Хорошо</string>
    <string name="negative_text">Перейти на сайт</string>
    <string name="message_text">Приносим свои извинения, на нашем сайте идут технические работы

Воспользуйтесь пока официальной формой https://reestr.ovga.mos.ru для проверки наличия действующего пропуска перед выходом машины в рейс, а также обратите внимание, чтобы увидеть постоянные пропуска нужно выбирать серию БА.</string>


</resources>