<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="#000"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tvTitleCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:paddingHorizontal="22dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_back_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_ui_display_bold"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/registration"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/registration_cont_blocks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleCont">

            <LinearLayout
                android:id="@+id/block1_registration_cont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="70dp"
                    android:fontFamily="@font/sf_ui_display_bold"
                    android:text="@string/to_enter_number_tel"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="38dp"
                    android:fontFamily="@font/sf_ui_display_light"
                    android:text="@string/phone"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/edt_registration_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_ui_display_light"
                    android:padding="0dp"
                    android:text="+7"
                    android:inputType="phone"
                    android:background="#000"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="#C8C7CC" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/bg_contract"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/registration_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:checked="true"
                        android:theme="@style/MySwitch" />

                    <TextView
                        android:id="@+id/txt_agreement"
                        android:enabled="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/agreement"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/block2_registration_cont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:background="@drawable/bg_contract"
                    android:orientation="vertical"
                    android:paddingVertical="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/sf_ui_display_medium"
                        android:text="@string/code_success_send"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/txt_send_sms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/sf_ui_display_regular"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edt_registration_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sf_ui_display_light"
                    android:hint="----"
                    android:padding="0dp"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="17sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="#C8C7CC" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="28dp"
                    android:fontFamily="@font/sf_ui_display_light"
                    android:text="@string/retry_send_code"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/registration_cont_blocks">

            <TextView
                android:id="@+id/btn_retry_send_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="13dp"
                android:text="@string/send_code_retry"
                android:textSize="14sp"
                android:minHeight="40dp"
                android:minWidth="180dp"
                android:visibility="gone"
                android:gravity="center"
                android:fontFamily="@font/sf_ui_display_regular"
                android:textColor="#1FA6F1"
                android:background="@drawable/ic_rectangle_round_4_blue" />

            <TextView
                android:id="@+id/btn_didnt_get_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="13dp"
                android:minHeight="40dp"
                android:minWidth="180dp"
                android:visibility="gone"
                android:gravity="center"
                android:fontFamily="@font/sf_ui_display_regular"
                android:text="@string/didnt_get_sms"
                android:textColor="#1FA6F1"
                android:background="@drawable/ic_rectangle_round_4_blue" />

            <TextView
                android:id="@+id/btn_registration_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#99EBEBF5"
                android:text="@string/enter"
                android:minHeight="40dp"
                android:minWidth="180dp"
                android:gravity="center"
                android:fontFamily="@font/sf_ui_display_regular"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="13dp"
                android:background="@drawable/ic_rectangle_round_4_gray" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>