<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="#000"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bknd_pass"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tvTitleCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:paddingHorizontal="22dp"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/btn_back_docs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_back" />
            </FrameLayout>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_ui_display_bold"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/docs"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@+id/tvTitleCont"
    app:layout_constraintBottom_toBottomOf="parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >
        <TextView
            android:id="@+id/txt_title_sts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/sf_ui_display_light"
            android:text="@string/sts"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleDocsSts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/txt_title_pts"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_sts"
            app:spanCount="2" />
        <TextView
            android:id="@+id/txt_title_pts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/sf_ui_display_light"
            android:text="@string/pts"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycleDocsSts" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleDocsPts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/txt_title_dk"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_pts"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />

        <TextView
            android:id="@+id/txt_title_dk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/sf_ui_display_light"
            android:text="@string/dk"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycleDocsPts" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleDocsDk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_title_driver_card"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_dk"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />
        <TextView
            android:id="@+id/txt_title_driver_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/sf_ui_display_light"
            android:text="@string/driver_card"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycleDocsDk" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleDocsDriverCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/txt_title_passport"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_driver_card"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />
        <TextView
            android:id="@+id/txt_title_passport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/sf_ui_display_light"
            android:text="@string/passport"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycleDocsDriverCard" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleDocsPassport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txt_title_card_company"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_passport"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />

        <TextView
            android:id="@+id/txt_title_card_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/sf_ui_display_light"
            android:text="@string/card_company"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycleDocsPassport" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleDocsCardCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/txt_title_contract_credit"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_card_company"
            app:spanCount="2" />

        <TextView
            android:id="@+id/txt_title_contract_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/sf_ui_display_light"
            android:text="@string/contract_credit"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycleDocsCardCompany" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleDocsContractCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_title_contract_carriage"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_contract_credit"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />

        <TextView
            android:id="@+id/txt_title_contract_carriage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/sf_ui_display_light"
            android:text="@string/contrsct_carriage"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycleDocsContractCredit" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleDocsContractCarriage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_contract_carriage"
            app:spanCount="2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>